--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -39,3 +39,21 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+node_modules/
+dist/
+build/
+.cache/
+.next/
+out/
+.env
+.DS_Store
+
+.vscode/
+.idea/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
